--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -43,7 +43,7 @@
 						<div
 							id="eqBtn"
 							class="menuBarBtn"
-							onclick="selectEQBtn(event), eqYearPush()"
+							onclick="selectEQBtn(event), actionEqYear()"
 						>
 							<img
 								src="../img/icon_earthquake.png"
@@ -59,7 +59,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake.png"
+									src="../img/marker_radioactivity_normal.png"
 									alt="noEqMarker"
 									class="markerInfoImg"
 								/>
@@ -69,7 +69,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake_yellow.png"
+									src="../img/marker_radioactivity_yellow.png"
 									alt="noEqMarker_yellow"
 									class="markerInfoImg"
 								/>
@@ -79,7 +79,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake_red.png"
+									src="../img/marker_radioactivity_red.png"
 									alt="noEqMarker_red"
 									class="markerInfoImg"
 								/>
