지진 관련 js 코드 파일 분리. 안 쓰는 html 파일 test 폴더로 이동

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -31,7 +31,7 @@
 						<div
 							id="radioBtn"
 							class="selectedBtn"
-							onclick="selectRadioBtn(event)"
+							onclick="selectRadioBtn(event), radioAction()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
@@ -150,5 +150,7 @@
 	</script>
 
 	<script src="../JS/kakaoMap.js"></script>
+	<script src="../JS/radioData.js"></script>
+	<script src="../JS/eqData.js"></script>
 	<script src="../JS/button.js"></script>
 </html>
