--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -8,10 +8,6 @@
 		<link rel="stylesheet" href="../CSS/common.css" />
 		<link rel="stylesheet" href="../CSS/index.css" />
 	</head>
-	<!-- 로그인 버튼 -->
-	<!-- <div class="signInClick">
-				<a href="./">로그인</a>
-			</div> -->
 
 	<body>
 		<!-- 전체 영역 -->
@@ -43,7 +39,7 @@
 						<div
 							id="eqBtn"
 							class="menuBarBtn"
-							onclick="selectEQBtn(event), actionEqYear()"
+							onclick="selectEQBtn(event), eqAction()"
 						>
 							<img
 								src="../img/icon_earthquake.png"
