라디오 전부설정

--- a/src/main/resources/templates/map/test.html
+++ b/src/main/resources/templates/map/test.html
@@ -45,6 +45,17 @@
 
 <body>
 
+<form action="/map/radio" method="post">
+    <div>
+
+        <input type="text" placeholder="년도" name="year">
+        <br>
+        <input type="text" placeholder="월" name="month">
+        <button>입력</button>
+
+    </div>
+</form>
+
 
     <div id="myModal" class="modal">
 
@@ -55,7 +66,6 @@
         </div>
 
     </div>
-    <button type="button" onclick=""></button>
 
     <p id="result"></p>
 
@@ -94,46 +104,60 @@
         // 마커 이미지의 이미지 주소입니다
         var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
 
-        $.ajax({
-            url: "/map/testy", // JSON 데이터를 받아올 URL.
-            type: "GET",
-            success: function (data) {
-                const positions = data.map(function (radioMap) {
-                    return {
-                        title: radioMap.address,
-                        latlng: new kakao.maps.LatLng(radioMap.lat, radioMap.lon)
 
-                    };
-                });
+        $('form').on('submit', function (e) {
+            e.preventDefault();  // 기본 form submit 동작을 막습니다.
 
-                for (var i = 0; i < positions.length; i++) {
+            // 폼에서 입력된 년도와 월을 가져옵니다.
+            var year = $('input[name="year"]').val();
+            var month = $('input[name="month"]').val();
 
-                    // 마커 이미지의 이미지 크기 입니다
-                    var imageSize = new kakao.maps.Size(24, 35);
 
-                    // 마커 이미지를 생성합니다
-                    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+            $.ajax({
+                url: "/map/radio", // JSON 데이터를 받아올 URL.
+                type: "POST",
+                data: {
+                    year: year,
+                    month: month
+                },
+                success: function (data) {
+                    const positions = data.map(function (radioMap) {
+                        return {
+                            title: radioMap.address,
+                            latlng: new kakao.maps.LatLng(radioMap.lat, radioMap.lon)
 
-                    // 마커를 생성합니다
-                    var marker = new kakao.maps.Marker({
-                        map: map, // 마커를 표시할 지도
-                        position: positions[i].latlng, // 마커를 표시할 위치
-                        title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
-                        image: markerImage, // 마커 이미지
-                        clickable: true
+                        };
                     });
-                    addMarkerClickListener(marker);
-                }
-                function addMarkerClickListener(marker) {
-                    kakao.maps.event.addListener(marker, 'click', function () {
-                        document.getElementById('markerTitle').innerText = marker.getTitle();
-                        modal.style.display = "inline-block";
-                    });
-                }
-            }
 
+                    for (var i = 0; i < positions.length; i++) {
+
+                        // 마커 이미지의 이미지 크기 입니다
+                        var imageSize = new kakao.maps.Size(24, 35);
+
+                        // 마커 이미지를 생성합니다
+                        var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+
+                        // 마커를 생성합니다
+                        var marker = new kakao.maps.Marker({
+                            map: map, // 마커를 표시할 지도
+                            position: positions[i].latlng, // 마커를 표시할 위치
+                            title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+                            image: markerImage, // 마커 이미지
+                            clickable: true
+                        });
+                        addMarkerClickListener(marker);
+                    }
+
+                    function addMarkerClickListener(marker) {
+                        kakao.maps.event.addListener(marker, 'click', function () {
+                            document.getElementById('markerTitle').innerText = marker.getTitle();
+                            modal.style.display = "inline-block";
+                        });
+                    }
+                }
+
+            });
         });
-
 
 
 
