--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -27,7 +27,7 @@
 						<div
 							id="radioBtn"
 							class="selectedBtn"
-							onclick="selectRadioBtn(event), radioAction()"
+							onclick="selectRadioBtn(event), eqClose()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
@@ -70,7 +70,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">경고</span>
+							<span class="markerInfo_eqScale">관심</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -125,6 +125,7 @@
 	<!-- script -->
 
 	<!-- kakao 지도 관련 script -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 	<script
 		type="text/javascript"
@@ -149,7 +150,6 @@
 	<script src="../JS/radioData.js"></script>
 	<script src="../JS/eqData.js"></script>
 	<script src="../JS/button.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script>
 		var mapContainer = document.getElementById("map"), // 지도를 표시할 div
 			mapOption = {
@@ -158,8 +158,7 @@
 			};
 
 		// 마커 이미지의 이미지 주소입니다
-		var imageSrc =
-			"https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+		var imageSrc = "../img/marker_radioactivity_normal.png";
 
 		$.ajax({
 			url: "/map/testy", // JSON 데이터를 받아올 URL.
@@ -174,7 +173,7 @@
 
 				for (var i = 0; i < positions.length; i++) {
 					// 마커 이미지의 이미지 크기 입니다
-					var imageSize = new kakao.maps.Size(24, 35);
+					var imageSize = new kakao.maps.Size(13, 13);
 
 					// 마커 이미지를 생성합니다
 					var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
