--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -147,10 +147,10 @@
 	</script>
 
 	<script src="../JS/kakaoMap.js"></script>
-	<script src="../JS/radioData.js"></script>
+	<script th:inline="none" src="../JS/radioData.js"></script>
 	<script src="../JS/eqData.js"></script>
 	<script src="../JS/button.js"></script>
-	<script>
+	<!-- <script>
 		var mapContainer = document.getElementById("map"), // 지도를 표시할 div
 			mapOption = {
 				center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
@@ -197,5 +197,5 @@
 				}
 			},
 		});
-	</script>
+	</script> -->
 </html>
