테스트 항목들 이름변경입니다 (중요x)

--- a/src/main/resources/templates/test/testContourmap.html
+++ b/src/main/resources/templates/test/testContourmap.html
@@ -70,7 +70,7 @@
 
       connectgaps: true,
       zsmooth: 'best',
-      type: 'contour', //histogram2dcontour, contour, heatmap
+      type: 'heatmap', //histogram2dcontour, contour, heatmap
 
       showscale: false,
       autocolorscale: 'hot',
