--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -14,8 +14,9 @@
 /* 메뉴 바 영역 */
 .menuBarArea {
 	width: 185px;
-	height: 100%;
+	height: 13%;
 	background-color: #5ea8c8e1;
+	/* #5ea8c8e1 */
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
@@ -25,6 +26,11 @@
 	box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(216, 216, 216, 0.173);
 	position: absolute;
 	z-index: 3;
+	transition-duration: 0.6s;
+}
+.menuBarArea:hover {
+	/* background-color: #5ea8c8e1; */
+	height: 88%;
 }
 .menuBarBtn {
 	display: flex;
@@ -224,7 +230,6 @@
 	flex-direction: row;
 	padding: 10px 10px 10px 10px;
 	align-items: center;
-	transition-duration: 1s;
 }
 .markerInfoImg {
 	width: 20px;
