--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -14,7 +14,11 @@
 		<div class="mainArea">
 			<!-- header 영역 -->
 			<div class="headerArea">
-				<div class="logoArea">
+				<div
+					class="logoArea"
+					onmouseover="mouseoverMenuBar()"
+					onmouseout="mouseoutMenuBar()"
+				>
 					<head th:replace="common/header" />
 				</div>
 			</div>
@@ -23,7 +27,12 @@
 			<section class="mapArea">
 				<div id="map" class="map">
 					<!-- 메뉴 바 영역-->
-					<div class="menuBarArea">
+					<div
+						id="menuBarArea"
+						class="menuBarArea"
+						onmouseover="mouseoverMenuBar()"
+						onmouseout="mouseoutMenuBar()"
+					>
 						<div
 							id="radioBtn"
 							class="selectedBtn"
@@ -94,7 +103,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">진도 0 ~ 1.9</span>
+							<span class="markerInfo_eqScale">진도 0 ~ 2 미만</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -104,7 +113,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">진도 1.1 ~ 2.9</span>
+							<span class="markerInfo_eqScale">진도 2.1 ~ 3 미만</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -141,7 +150,7 @@
 
 			const bar = document.querySelector(".menuBarArea");
 
-			bar.style.height = `${0.88 * parseInt(map.style.height)}px`;
+			bar.style.height = `${0.13 * parseInt(map.style.height)}px`;
 			console.log(`브라우저 세로 길이: ${bar.style.height}`);
 		});
 	</script>
