expand 아이콘 위치 수정

--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -84,8 +84,7 @@
 
 .iconExpandArea {
 	justify-content: center;
-	margin-left: 40%;
-	margin-right: 60%;
+	margin: 1% 0 0 42%;
 }
 
 /* 지도 영역 및 지도 */
